# crisper-app

./: .gitignore  old.rs  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  main.rs  models.rs  utils.rs
src-tauri/src/commands/: ingest.rs  log.rs  mod.rs  query.rs
src-tauri/src/llm/: extractor.rs  mod.rs
src/components/: ChatRoom.tsx  Genifier.tsx  GraphVisualizer.tsx  ModelStore.tsx
